--- a/Telephone-Pictionary/res/values/strings.xml
+++ b/Telephone-Pictionary/res/values/strings.xml
@@ -4,7 +4,24 @@
     <string name="app_name">Telephone-Pictionary</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
-    <string name="title_activity_explanation">Explanation</string>
-    <string name="title_activity_connect">Connect</string>
 
+    <string name="title_activity_explanation">Explanation</string>
+	<string name="title_activity_connect">Connections</string>
+	<string name="title_activity_canvas_drawer">Canvas-Drawer</string>
+    
+    <string name="send">Send</string>
+    <string name="save">Save</string>
+    <string name="clear_drawing">Clear</string>
+    
+    <string name="brush_size">Brush</string>
+    <string name="color">Color</string>
+    <string name="erase">Erase</string>
+    
+    <string name="small">Small</string>
+	<string name="med">Medium</string>
+	<string name="large">Large</string>
+    <string name="xsml">ExtraSmall</string>
+	<string name="xl">ExtraLarge</string>
+
+	
 </resources>
