--- a/Telephone-Pictionary/res/values/strings.xml
+++ b/Telephone-Pictionary/res/values/strings.xml
@@ -14,6 +14,8 @@
     
     <string name="send">Send</string>
     <string name="save">Save</string>
+     <string name="back">Back</string>
+     
     <string name="clear_drawing">Clear</string>
     
     <string name="brush_size">Brush</string>
