--- a/Telephone-Pictionary/res/values/strings.xml
+++ b/Telephone-Pictionary/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="normal_instr"></string>
     <string name="pass_play">Pass And Play Version</string>
     <string name="pass_play_instr">Start the new game using the Start Game button. Select how many players. The first player will type a phrase on a Card then select the Pass button. The player will then pass the device onto the next player. This player will then draw a picture depicting the phrase and pass it on. Play will continue alternating between the player typing a phrase from the picture and the player drawing a picture from a phrase until all the device has traveled to all players.</string>
+    <string name="numPlayers">Enter the number of players</string>
     <string name="title_activity_explanation">Explanation</string>
     <string name="title_activity_connect">Connections</string>
     <string name="title_activity_canvas_drawer">Canvas-Drawer</string>
