Working on end game class

--- a/Telephone-Pictionary/res/values/strings.xml
+++ b/Telephone-Pictionary/res/values/strings.xml
@@ -25,5 +25,6 @@
     <string name="xl">ExtraLarge</string>
     <string name="title_activity_canvas_writer">CanvasWriter</string>
     <string name="title_activity_card_viewer">CardViewer</string>
+    <string name="title_activity_end_game">EndGame</string>
 
 </resources>
