--- a/Telephone-Pictionary/res/values/strings.xml
+++ b/Telephone-Pictionary/res/values/strings.xml
@@ -26,5 +26,6 @@
     <string name="title_activity_canvas_writer">CanvasWriter</string>
     <string name="title_activity_card_viewer">CardViewer</string>
     <string name="title_activity_end_game">EndGame</string>
+    <string name="title_activity_card_fragment">CardFragment</string>
 
 </resources>
